[package]
name = "gbspack"
version = "1.2.5"
authors = ["Chris Maltby <chris.maltby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1"

[lib]
name = "gbspacklib"
path = "src/lib.rs"

[[bin]]
name = "gbspack"
path = "src/main.rs"